# zksync-os-server

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  run_local.sh
.github/scripts/: test-configs.sh
.github/workflows/: ci.yml  release-bins.yml  spec-tests.yaml
docs/src/guides/: running_with_l1.md  updating.md
docs/src/setup/: local_run.md
genesis/: genesis.json
integration-tests/: .gitignore  Cargo.toml
integration-tests/src/: assert_traits.rs  config.rs  contracts.rs  lib.rs  prover_tester.rs
integration-tests/tests/: api.rs  call.rs  erc20.rs  external_node.rs  filter.rs  interop.rs  l1.rs  mempool.rs  mod.rs  prover.rs  pubsub.rs  tracing.rs
integration-tests/tests/node/: restart.rs
integration-tests/tests/upgrade/: mod.rs
latest/: print.html  searchindex.js  searchindex.json
lib/base_token_adjuster/src/: lib.rs
lib/batch_types/: Cargo.toml
lib/batch_types/src/: batch_info.rs
lib/batch_verification/: Cargo.toml
lib/contract_interface/src/: calldata.rs  lib.rs  models.rs
lib/gas_adjuster/src/: lib.rs
lib/integration_tests_wrapper/: Cargo.toml
lib/integration_tests_wrapper/src/: lib.rs
lib/interop_watcher/: Cargo.toml
lib/interop_watcher/src/: lib.rs
lib/multivm/: Cargo.toml  build.rs
lib/revm_consistency_checker/: Cargo.toml
lib/rpc/: Cargo.toml
lib/rpc_api/: Cargo.toml
lib/types/: Cargo.toml
loadbase/src/: erc20.rs  erc20_worker.rs  main.rs  metrics.rs  wallets.rs
local-chains/: README.md
local-chains/v31/: config.json  genesis.json
local-chains/v31.0/: genesis.json  versions.yaml
(+106 files in other folders)
