[package]
name = "zksync_os_integration_tests_wrapper"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
zksync_os_integration_tests = { path = "../../integration-tests" }

