[package]
name = "zksync_os_interop_watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zksync_os_contract_interface.workspace = true
zksync_os_types.workspace = true

alloy = { workspace = true, features = ["reqwest", "rpc-types", "providers"] }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
async-recursion.workspace = true
